수정 - BasicAutoSyncCOnfigService
BasicAutoSyncCOnfigService의 스케쥴러 관련 메소드 수정